--- a/makefile.am
+++ b/makefile.am
@@ -1,5 +1,6 @@
 PROGNAME = hyper_sports
-MAIN = ..\$(PROGNAME)
+MAIN_AGA = ..\$(PROGNAME)_aga
+MAIN_OCS = ..\$(PROGNAME)_ocs
 
 
 ifdef RELEASE_BUILD
@@ -9,15 +10,16 @@ endif
 # Bebbo's package usually installs itself there
 GCC_BIN = C:\amiga-gcc\bin
 ASM_BASE = $(GCC_BIN)/m68k-amigaos-as -c --defsym __amiga__=1
-ASM_000 = $(ASM_BASE) -m68000 $(OPT_RELEASE) 
+ASM_000 = $(ASM_BASE) -m68000 $(OPT_RELEASE) --defsym OCS_VERSION=1
 ASM_020 = $(ASM_BASE) -m68020 --defsym MC68020=1 $(OPT_RELEASE) 
 ASM = $(ASM_020)
-MAIN_OBJ = amiga.o
-WHDLOADER = ..\$(PROGNAME).slave
-WHDLOADER_CHIP = ..\$(PROGNAME)_chip.slave
+WHDLOADER_AGA = ..\$(PROGNAME)_AGA.slave
+WHDLOADER_CHIP_AGA = ..\$(PROGNAME)_AGA_chip.slave
 ASSETS = ..\assets\amiga
 AMIGASRC = amiga
-SOURCE = $(AMIGASRC)/$(PROGNAME)HD.s
+AGASRC = amiga/aga
+OCSSRC = amiga/ocs
+
 
 
 
@@ -28,26 +30,26 @@ WHDBASE = $(HDBASE)\PROJETS\HDInstall\DONE\WHDLoad
 WHDASM = vasmm68k_mot -DDATETIME -I$(HDBASE)/amiga39_JFF_OS/include -I$(WHDBASE)\Include -I$(WHDBASE) -devpac -nosym -Fhunkexe
 
 
-# leave MAIN_OBJ first
-OBJS = $(MAIN_OBJ) sounds.o amiga_shared.o $(PROGNAME).o ram.o graphics.o rom.o vbr.o ReadJoyPad.o ptplayer.o 
+BASE_OBJS = sounds.o amiga_shared.o $(PROGNAME).o ram.o rom.o vbr.o ReadJoyPad.o ptplayer.o 
+# leave amigaxxx first
+AGA_OBJS = amiga_aga.o $(BASE_OBJS) graphics_aga.o
 
-
-all: $(MAIN) $(WHDLOADER) $(WHDLOADER_CHIP) $(AMIGASRC)/graphics.68k $(AMIGASRC)/sounds.68k
+all: $(MAIN_AGA) $(WHDLOADER_AGA) $(WHDLOADER_CHIP_AGA) $(AGASRC)/graphics.68k $(AMIGASRC)/sounds.68k
  
 
 
 clean:
-	del $(OBJS) "$(MAIN)"
+	del $(AGA_OBJS) "$(MAIN_AGA)" "$(MAIN_OCS)"
 	
-$(AMIGASRC)/graphics.68k: $(ASSETS)/convert_graphics.py
-	cmd /c $(ASSETS)\convert_graphics.py
+$(AGASRC)/graphics.68k: $(ASSETS)/convert_graphics_aga.py
+	cmd /c $(ASSETS)\convert_graphics_aga.py
 
-$(AMIGASRC)/sounds.68k: $(ASSETS)/convert_sounds.py 
+$(AGASRC)/sounds.68k: $(ASSETS)/convert_sounds.py 
 	cmd /c $(ASSETS)\convert_sounds.py
 	del sound_entries.o sounds.o
 	
-$(MAIN): $(OBJS)
-	$(GCC_BIN)/m68k-amigaos-ld $(OPT_RELEASE_LINK) -o $(MAIN) $(OBJS)
+$(MAIN_AGA): $(AGA_OBJS)
+	$(GCC_BIN)/m68k-amigaos-ld $(OPT_RELEASE_LINK) -o $(MAIN_AGA) $(AGA_OBJS)
 
 ram.o: ram.68k $(PROGNAME).inc
 	$(ASM) ram.68k -o ram.o
@@ -55,8 +57,8 @@ rom.o: rom.68k
 	$(ASM) rom.68k -o rom.o
 $(PROGNAME).o: $(PROGNAME).68k $(PROGNAME).inc include.inc sounds.inc data.inc
 	$(ASM) $(PROGNAME).68k -o $(PROGNAME).o
-amiga.o: $(AMIGASRC)/amiga.68k $(PROGNAME).inc data.inc $(AMIGASRC)/ReadJoyPad.i $(AMIGASRC)/palette.68k $(AMIGASRC)/sound_entries.68k
-	$(ASM) -I$(AMIGASRC) -I$(AMIGASRC)/mit_includes $(AMIGASRC)/amiga.68k -o amiga.o
+amiga_aga.o: $(AMIGASRC)/amiga.68k $(PROGNAME).inc data.inc $(AMIGASRC)/ReadJoyPad.i $(AGASRC)/palette.68k $(AMIGASRC)/sound_entries.68k
+	$(ASM) -I$(AGASRC) -I$(AMIGASRC) -I$(AMIGASRC)/mit_includes $(AMIGASRC)/amiga.68k -o amiga_aga.o
 amiga_shared.o: $(AMIGASRC)/amiga_shared.68k data.inc $(AMIGASRC)/sound_entries.68k $(PROGNAME).inc $(AMIGASRC)/ReadJoyPad.i
 	$(ASM) -I$(AMIGASRC) -I$(AMIGASRC)/mit_includes $(AMIGASRC)/amiga_shared.68k -o amiga_shared.o
 vbr.o: $(AMIGASRC)/vbr.68k
@@ -67,14 +69,14 @@ sounds.o: $(AMIGASRC)/sounds.68k
 	$(ASM) -I$(AMIGASRC) $(AMIGASRC)/sounds.68k -o sounds.o
 ReadJoyPad.o: $(AMIGASRC)/ReadJoyPad.68k amiga/ReadJoyPad.i
 	$(ASM) -I$(AMIGASRC) -I$(AMIGASRC)/mit_includes $(AMIGASRC)/ReadJoyPad.68k -o ReadJoyPad.o
-graphics.o: $(AMIGASRC)/graphics.68k $(PROGNAME).inc
-	$(ASM) $(AMIGASRC)/graphics.68k -o graphics.o
+graphics_aga.o: $(AGASRC)/graphics.68k $(PROGNAME).inc
+	$(ASM) $(AGASRC)/graphics.68k -o graphics_aga.o
 
 
-$(WHDLOADER) : $(SOURCE)
+$(WHDLOADER_AGA) : $(AGASRC)/$(PROGNAME)HD.s
 	wdate.py> datetime
-	$(WHDASM) -o $(WHDLOADER) $(SOURCE)
+	$(WHDASM) -o $(WHDLOADER_AGA) $(AGASRC)/$(PROGNAME)HD.s
 	
-$(WHDLOADER_CHIP) : $(SOURCE)
+$(WHDLOADER_CHIP_AGA) : $(AGASRC)/$(PROGNAME)HD.s
 	wdate.py> datetime
-	$(WHDASM) -DCHIP_ONLY -o $(WHDLOADER_CHIP) $(SOURCE)
+	$(WHDASM) -DCHIP_ONLY -o $(WHDLOADER_CHIP_AGA) $(AGASRC)/$(PROGNAME)HD.s
