--- a/makefile.am
+++ b/makefile.am
@@ -1,7 +1,7 @@
 PROGNAME = hyper_sports
 MAIN_AGA = ..\$(PROGNAME)_aga
 MAIN_ECS = ..\$(PROGNAME)_ecs
-MAIN_OCS = ..\$(PROGNAME)_ocs
+MAIN_ECS = ..\$(PROGNAME)_ecs
 AMIGA_SHELL = ..\$(PROGNAME)
 
 ifdef RELEASE_BUILD
@@ -11,17 +11,17 @@ endif
 # Bebbo's package usually installs itself there
 GCC_BIN = C:\amiga-gcc\bin
 ASM_BASE = $(GCC_BIN)/m68k-amigaos-as -c --defsym __amiga__=1
-ASM_000 = $(ASM_BASE) -m68000 $(OPT_RELEASE) --defsym OCS_VERSION=1
+ASM_000 = $(ASM_BASE) -m68000 $(OPT_RELEASE) --defsym ECS_VERSION=1
 ASM_020 = $(ASM_BASE) -m68020 --defsym MC68020=1 $(OPT_RELEASE) 
 ASM = $(ASM_020)
 WHDLOADER_AGA = ..\$(PROGNAME)_AGA.slave
 WHDLOADER_CHIP_AGA = ..\$(PROGNAME)_AGA_chip.slave
-WHDLOADER_OCS = ..\$(PROGNAME)_OCS.slave
-WHDLOADER_CHIP_OCS = ..\$(PROGNAME)_OCS_chip.slave
+WHDLOADER_ECS = ..\$(PROGNAME)_ECS.slave
+WHDLOADER_CHIP_ECS = ..\$(PROGNAME)_ECS_chip.slave
 ASSETS = ..\assets\amiga
 AMIGASRC = amiga
 AGASRC = amiga/aga
-OCSSRC = amiga/ocs
+ECSSRC = amiga/ecs
 
 
 
@@ -36,9 +36,9 @@ WHDASM = vasmm68k_mot -DDATETIME -I$(HDBASE)/amiga39_JFF_OS/include -I$(WHDBASE)
 BASE_OBJS = sounds.o amiga_shared.o $(PROGNAME).o ram.o rom.o vbr.o ReadJoyPad.o ptplayer.o 
 # leave amigaxxx first
 AGA_OBJS = amiga_aga.o $(BASE_OBJS) graphics_aga.o
-OCS_OBJS = amiga_ocs.o $(BASE_OBJS) graphics_ocs.o
+ECS_OBJS = amiga_ecs.o $(BASE_OBJS) graphics_ecs.o
 
-all: $(MAIN_AGA) $(MAIN_OCS) $(AMIGA_SHELL) $(WHDLOADER_OCS) $(WHDLOADER_CHIP_OCS) $(WHDLOADER_AGA) $(WHDLOADER_CHIP_AGA) $(AGASRC)/graphics.68k $(AMIGASRC)/sounds.68k
+all: $(MAIN_AGA) $(MAIN_ECS) $(AMIGA_SHELL) $(WHDLOADER_ECS) $(WHDLOADER_CHIP_ECS) $(WHDLOADER_AGA) $(WHDLOADER_CHIP_AGA) $(AGASRC)/graphics.68k $(AMIGASRC)/sounds.68k
  
 $(AMIGA_SHELL): shell.o
 	$(GCC_BIN)/m68k-amigaos-ld $(OPT_RELEASE_LINK) -o $(AMIGA_SHELL) shell.o
@@ -46,15 +46,15 @@ $(AMIGA_SHELL): shell.o
 
 
 clean:
-	del $(AGA_OBJS) $(OCS_OBJS) "$(MAIN_AGA)" "$(MAIN_OCS)"
+	del $(AGA_OBJS) $(ECS_OBJS) "$(MAIN_AGA)" "$(MAIN_ECS)"
 	
 shell.o: $(AMIGASRC)/shell.68k
 	$(ASM_000) -I$(AMIGASRC) -I$(AMIGASRC)/mit_includes $(AMIGASRC)/shell.68k -o shell.o
 
 $(AGASRC)/graphics.68k: $(ASSETS)/convert_graphics_aga.py $(ASSETS)/shared.py
 	cmd /c $(ASSETS)\convert_graphics_aga.py
-$(OCSSRC)/graphics.68k: $(ASSETS)/convert_graphics_ocs.py $(ASSETS)/shared.py
-	cmd /c $(ASSETS)\convert_graphics_ocs.py
+$(ECSSRC)/graphics.68k: $(ASSETS)/convert_graphics_ecs.py $(ASSETS)/shared.py
+	cmd /c $(ASSETS)\convert_graphics_ecs.py
 
 $(AGASRC)/sounds.68k: $(ASSETS)/convert_sounds.py 
 	cmd /c $(ASSETS)\convert_sounds.py
@@ -63,8 +63,8 @@ $(AGASRC)/sounds.68k: $(ASSETS)/convert_sounds.py
 $(MAIN_AGA): $(AGA_OBJS)
 	$(GCC_BIN)/m68k-amigaos-ld $(OPT_RELEASE_LINK) -o $(MAIN_AGA) $(AGA_OBJS)
 
-$(MAIN_OCS): $(OCS_OBJS)
-	$(GCC_BIN)/m68k-amigaos-ld $(OPT_RELEASE_LINK) -o $(MAIN_OCS) $(OCS_OBJS)
+$(MAIN_ECS): $(ECS_OBJS)
+	$(GCC_BIN)/m68k-amigaos-ld $(OPT_RELEASE_LINK) -o $(MAIN_ECS) $(ECS_OBJS)
 
 ram.o: ram.68k $(PROGNAME).inc
 	$(ASM) ram.68k -o ram.o
@@ -74,8 +74,8 @@ $(PROGNAME).o: $(PROGNAME).68k $(PROGNAME).inc include.inc sounds.inc data.inc
 	$(ASM) $(PROGNAME).68k -o $(PROGNAME).o
 amiga_aga.o: $(AMIGASRC)/amiga.68k $(PROGNAME).inc data.inc $(AMIGASRC)/ReadJoyPad.i $(AGASRC)/palette.68k $(AMIGASRC)/sound_entries.68k
 	$(ASM) -I$(AGASRC) -I$(AMIGASRC) -I$(AMIGASRC)/mit_includes $(AMIGASRC)/amiga.68k -o amiga_aga.o
-amiga_ocs.o: $(AMIGASRC)/amiga.68k $(PROGNAME).inc data.inc $(AMIGASRC)/ReadJoyPad.i $(AGASRC)/palette.68k $(AMIGASRC)/sound_entries.68k
-	$(ASM_000) -I$(OCSSRC) -I$(AMIGASRC) -I$(AMIGASRC)/mit_includes $(AMIGASRC)/amiga.68k -o amiga_ocs.o
+amiga_ecs.o: $(AMIGASRC)/amiga.68k $(PROGNAME).inc data.inc $(AMIGASRC)/ReadJoyPad.i $(ECSSRC)/palette.68k $(AMIGASRC)/sound_entries.68k
+	$(ASM_000) -I$(ECSSRC) -I$(AMIGASRC) -I$(AMIGASRC)/mit_includes $(AMIGASRC)/amiga.68k -o amiga_ecs.o
 amiga_shared.o: $(AMIGASRC)/amiga_shared.68k data.inc $(AMIGASRC)/sound_entries.68k $(PROGNAME).inc $(AMIGASRC)/ReadJoyPad.i
 	$(ASM) -I$(AMIGASRC) -I$(AMIGASRC)/mit_includes $(AMIGASRC)/amiga_shared.68k -o amiga_shared.o
 vbr.o: $(AMIGASRC)/vbr.68k
@@ -88,8 +88,8 @@ ReadJoyPad.o: $(AMIGASRC)/ReadJoyPad.68k amiga/ReadJoyPad.i
 	$(ASM) -I$(AMIGASRC) -I$(AMIGASRC)/mit_includes $(AMIGASRC)/ReadJoyPad.68k -o ReadJoyPad.o
 graphics_aga.o: $(AGASRC)/graphics.68k $(PROGNAME).inc
 	$(ASM) $(AGASRC)/graphics.68k -o graphics_aga.o
-graphics_ocs.o: $(OCSSRC)/graphics.68k $(PROGNAME).inc
-	$(ASM_000) $(OCSSRC)/graphics.68k -o graphics_ocs.o
+graphics_ecs.o: $(ECSSRC)/graphics.68k $(PROGNAME).inc
+	$(ASM_000) $(ECSSRC)/graphics.68k -o graphics_ecs.o
 
 
 $(WHDLOADER_AGA) : $(AGASRC)/$(PROGNAME)HD.s
@@ -100,10 +100,10 @@ $(WHDLOADER_CHIP_AGA) : $(AGASRC)/$(PROGNAME)HD.s
 	wdate.py> datetime
 	$(WHDASM) -DCHIP_ONLY -o $(WHDLOADER_CHIP_AGA) $(AGASRC)/$(PROGNAME)HD.s
 
-$(WHDLOADER_OCS) : $(OCSSRC)/$(PROGNAME)HD.s
+$(WHDLOADER_ECS) : $(ECSSRC)/$(PROGNAME)HD.s
 	wdate.py> datetime
-	$(WHDASM) -o $(WHDLOADER_OCS) $(OCSSRC)/$(PROGNAME)HD.s
+	$(WHDASM) -o $(WHDLOADER_ECS) $(ECSSRC)/$(PROGNAME)HD.s
 	
-$(WHDLOADER_CHIP_OCS) : $(OCSSRC)/$(PROGNAME)HD.s
+$(WHDLOADER_CHIP_ECS) : $(ECSSRC)/$(PROGNAME)HD.s
 	wdate.py> datetime
-	$(WHDASM) -DCHIP_ONLY -o $(WHDLOADER_CHIP_OCS) $(OCSSRC)/$(PROGNAME)HD.s
+	$(WHDASM) -DCHIP_ONLY -o $(WHDLOADER_CHIP_ECS) $(ECSSRC)/$(PROGNAME)HD.s
