--- a/makefile.am
+++ b/makefile.am
@@ -13,7 +13,7 @@ GCC_BIN = C:\amiga-gcc\bin
 ASM_BASE = $(GCC_BIN)/m68k-amigaos-as -c --defsym __amiga__=1
 ASM_000 = $(ASM_BASE) -m68000 $(OPT_RELEASE) --defsym ECS_VERSION=1
 ASM_020 = $(ASM_BASE) -m68020 --defsym MC68020=1 $(OPT_RELEASE) 
-ASM = $(ASM_020)
+ASM = $(ASM_000)
 WHDLOADER_AGA = ..\$(PROGNAME)_AGA.slave
 WHDLOADER_CHIP_AGA = ..\$(PROGNAME)_AGA_chip.slave
 WHDLOADER_ECS = ..\$(PROGNAME)_ECS.slave
@@ -73,7 +73,7 @@ rom.o: rom.68k
 $(PROGNAME).o: $(PROGNAME).68k $(PROGNAME).inc include.inc sounds.inc data.inc
 	$(ASM) $(PROGNAME).68k -o $(PROGNAME).o
 amiga_aga.o: $(AMIGASRC)/amiga.68k $(PROGNAME).inc data.inc $(AMIGASRC)/ReadJoyPad.i $(AGASRC)/palette.68k $(AMIGASRC)/sound_entries.68k
-	$(ASM) -I$(AGASRC) -I$(AMIGASRC) -I$(AMIGASRC)/mit_includes $(AMIGASRC)/amiga.68k -o amiga_aga.o
+	$(ASM_020) -I$(AGASRC) -I$(AMIGASRC) -I$(AMIGASRC)/mit_includes $(AMIGASRC)/amiga.68k -o amiga_aga.o
 amiga_ecs.o: $(AMIGASRC)/amiga.68k $(PROGNAME).inc data.inc $(AMIGASRC)/ReadJoyPad.i $(ECSSRC)/palette.68k $(AMIGASRC)/sound_entries.68k
 	$(ASM_000) -I$(ECSSRC) -I$(AMIGASRC) -I$(AMIGASRC)/mit_includes $(AMIGASRC)/amiga.68k -o amiga_ecs.o
 amiga_shared.o: $(AMIGASRC)/amiga_shared.68k data.inc $(AMIGASRC)/sound_entries.68k $(PROGNAME).inc $(AMIGASRC)/ReadJoyPad.i
@@ -89,7 +89,7 @@ ReadJoyPad.o: $(AMIGASRC)/ReadJoyPad.68k amiga/ReadJoyPad.i
 graphics_aga.o: $(AGASRC)/graphics.68k $(PROGNAME).inc
 	$(ASM) $(AGASRC)/graphics.68k -o graphics_aga.o
 graphics_ecs.o: $(ECSSRC)/graphics.68k $(PROGNAME).inc
-	$(ASM_000) $(ECSSRC)/graphics.68k -o graphics_ecs.o
+	$(ASM) $(ECSSRC)/graphics.68k -o graphics_ecs.o
 
 
 $(WHDLOADER_AGA) : $(AGASRC)/$(PROGNAME)HD.s
